2010-01-29  Sam Steingold  <sds@gnu.org>

	* lambdalist.lisp (dolist, check-exhausted): new local macros

2010-01-28  Sam Steingold  <sds@gnu.org>

	better error reporting in lambda list processing
	* lambdalist.lisp (lambda-list-error): new function,
	calls ERROR-OF-TYPE EXT:SOURCE-PROGRAM-ERROR
	(err-misplaced, err-invalid, skip-L, analyze-lambdalist)
	(analyze-generic-function-lambdalist, analyze-defsetf-lambdalist)
	(analyze-modify-macro-lambdalist)
	(analyze-method-combination-lambdalist):
	errfunc accepts FORM in addition to DETAIL
	* compiler.lisp (c-analyze-lambdalist): ditto
	* clos-method2.lisp (decompose-specialized-lambda-list): ditto
	* clos-genfun2b.lisp (check-gf-lambdalist+argorder): ditto
	* clos-methcomb2.lisp (define-method-combination): ditto + use
	SYS::LAMBDA-LIST-ERROR
	* clos-method1.lisp (initialize-instance-<standard-method>): ditto
	(program-error-reporter, analyze-method-description): ditto
	* clos-method3.lisp (method-signature): ditto
	* defstruct.lisp (ds-make-boa-constructor): ditto
	* places.lisp (defsetf, define-modify-macro): ditto
	* clos-genfun3.lisp (analyze-defgeneric-lambdalist): ditto
	* clos-genfun4.lisp (generic-function-signature): ditto
	* clos-methcomb2.lisp (check-em-arguments-option)
	(build-effective-method-function-form): ditto

2010-01-28  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2941408 ]: segfault after giving invalid replacement value
	* error.d (check_symbol_special): do not break out of the loop early

2010-01-28  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (roughly_SP) [USE_CUSTOM_TLS >=2]: simplify the CPP logic
	Reported by Yaroslav Kavenchuk <kavenchuk@jenty.by>

2010-01-27  Ivan Shvedunov  <ivan4th@gmail.com>

	* lispbibl.d (dfloat) [ARM]: do NOT swap hi/lo when __ARM_EABI__
	is defined (fixes READ-FLOAT/WRITE-FLOAT on Maemo Fremantle)

2010-01-26  Sam Steingold  <sds@gnu.org>

	* pathname.d (EXECUTE): do not resolve links in the file argument
	because some programs dispatch on argv[0], which could be a