@@ -35,6 +35,15 @@
                 (funcall errfunc lambdalist ,L
                          (TEXT "Lambda lists with dots are only allowed in macros, not here: ~S")
                          lambdalist)))
+           (symbol-or-pair-p (x) ; FOO or (FOO BAR)
+             `(or (symbolp ,x)
+                  (and (consp ,x)
+                       (symbolp (car ,x))
+                       (consp (cdr ,x))
+                       (symbolp (cadr ,x))
+                       (null (cddr ,x)))))
+           (singleton-symbol-p (x) ; (FOO)
+             `(and (consp ,x) (symbolp (car ,x)) (null (cdr ,x))))
            (skip-L (lastseen items)
              `(dolist (item L)
                 (if (memq item lambda-list-keywords)
@@ -106,8 +115,7 @@
                   (if (consp (cdr item))
                     (if (null (cddr item))
                       (note-optional (car item) (cadr item) 0)
-                      (if (and (consp (cddr item)) (symbolp (caddr item))
-                               (null (cdddr item)))
+                      (if (singleton-symbol-p (cddr item))
                         (note-optional (car item) (cadr item) (caddr item))
                         (err-invalid item)))
                     (err-invalid item)))
@@ -144,18 +152,11 @@
                 (push (symbol-to-keyword item) keyword)
                 (push item keyvar) (push nil keyinit) (push 0 keysvar)))
             (if (and (consp item)
-                     (or (symbolp (car item))
-                         (and (consp (car item))
-                              (symbolp (caar item))
-                              (consp (cdar item))
-                              (symbolp (cadar item))
-                              (null (cddar item))))
+                     (symbol-or-pair-p (car item))
                      (or (null (cdr item))
                          (and (consp (cdr item))
                               (or (null (cddr item))
-                                  (and (consp (cddr item))
-                                       (symbolp (caddr item))
-                                       (null (cdddr item)))))))
+                                  (singleton-symbol-p (cddr item))))))
               (progn
                 (if (consp (car item))
                   (progn
@@ -286,12 +287,7 @@
                 (push (symbol-to-keyword item) keyword)
                 (push item keyvar)))
             (if (and (consp item)
-                     (or (symbolp (car item))
-                         (and (consp (car item))
-                              (symbolp (caar item))
-                              (consp (cdar item))
-                              (symbolp (cadar item))
-                              (null (cddar item)))))
+                     (symbol-or-pair-p (car item)))
               (if (null (cdr item))
                 (if (consp (car item))
                   (progn
@@ -378,8 +374,7 @@
                   (if (consp (cdr item))
                     (if (null (cddr item))
                       (note-optional (car item) (cadr item) 0)
-                      (if (and (consp (cddr item)) (symbolp (caddr item))
-                               (null (cdddr item)))
+                      (if (singleton-symbol-p (cddr item))
                         (note-optional (car item) (cadr item) (caddr item))
                         (err-invalid item)))
                     (err-invalid item)))
@@ -416,18 +411,11 @@
                 (push (symbol-to-keyword item) keyword)
                 (push item keyvar) (push nil keyinit) (push 0 keysvar)))
             (if (and (consp item)
-                     (or (symbolp (car item))
-                         (and (consp (car item))
-                              (symbolp (caar item))
-                              (consp (cdar item))
-                              (symbolp (cadar item))
-                              (null (cddar item))))
+                     (symbol-or-pair-p (car item))
                      (or (null (cdr item))
                          (and (consp (cdr item))
                               (or (null (cddr item))
-                                  (and (consp (cddr item))
-                                       (symbolp (caddr item))
-                                       (null (cdddr item)))))))
+                                  (singleton-symbol-p (cddr item))))))
               (progn
                 (if (consp (car item))
                   (progn
@@ -524,8 +512,7 @@
                   (if (consp (cdr item))
                     (if (null (cddr item))
                       (note-optional (car item) (cadr item) 0)
-                      (if (and (consp (cddr item)) (symbolp (caddr item))
-                               (null (cdddr item)))
+                      (if (singleton-symbol-p (cddr item))
                         (note-optional (car item) (cadr item) (caddr item))
                         (err-invalid item)))
                     (err-invalid item)))
